# curse-typing

./: .gitignore  benchmark.py  markov_text.py  pyproject.toml  sentences.txt  text_model.py  typing.py
curse_typing/: make_sentences.py  markov_text.py  practice.py  reader.py  text_model.py
