[tool.poetry]
name = "curse-typing"
version = "0.1.0"
description = "A simple Python CLI program to practice typing."
authors = ["Hugh Wimberly <hugh.wimberly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
